@@ -22,6 +22,7 @@ version <next>:
 - remaining GPL parts in AC-3 decoder converted to LGPL
 - QCP demuxer
 - SoX native format muxer and demuxer
+- AMR-NB decoding/encoding, AMR-WB decoding via OpenCORE libraries
 
 
 
